Исправлен критический баг, добавлен метод погрузки посылок через рест